[gd_scene load_steps=17 format=1]

[ext_resource path="res://Scripts/Map/Global.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Old Paper/old_paper_paper_1_1_800x500.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Crates/dark_crate_five.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Map/map.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Map/Down_Level.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Map/down_tick.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Map/Right_Level.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Map/right_tick.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Lock/lock.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Map/Left_Level.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Map/left_tick.png" type="Texture" id=11]
[ext_resource path="res://Font/pirate.fnt" type="BitmapFont" id=12]
[ext_resource path="res://Scenes/Back.tscn" type="PackedScene" id=13]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.4814

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 21.0234

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 20.8417

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="OldPaper" type="Sprite" parent="."]

transform/scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="Crates" type="Node2D" parent="."]

editor/display_folded = true

[node name="Crate" type="Sprite" parent="Crates"]

visibility/opacity = 0.24
transform/pos = Vector2( -350, -200 )
transform/rot = -45.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Crate1" type="Sprite" parent="Crates"]

visibility/opacity = 0.24
transform/pos = Vector2( -350, 40 )
transform/rot = 15.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Crate2" type="Sprite" parent="Crates"]

visibility/opacity = 0.24
transform/pos = Vector2( -350, 300 )
transform/rot = 30.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Crate3" type="Sprite" parent="Crates"]

visibility/opacity = 0.24
transform/pos = Vector2( 100, -200 )
transform/rot = -20.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Crate4" type="Sprite" parent="Crates"]

visibility/opacity = 0.24
transform/pos = Vector2( 381.294, 47.9831 )
transform/rot = -20.0
transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Map" type="Node2D" parent="."]

transform/pos = Vector2( 0, 55 )

[node name="Map" type="Sprite" parent="Map"]

texture = ExtResource( 4 )

[node name="Down_Level" type="Area2D" parent="Map"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.39522, 0, 0, 1.49282, -2.96375, 119.109 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 5 )

[node name="Down_Tick" type="Sprite" parent="Map/Down_Level"]

visibility/visible = false
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Down_Level"]

transform/pos = Vector2( -2.96375, 119.109 )
transform/scale = Vector2( 1.39522, 1.49282 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Right_Level" type="Area2D" parent="Map"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 69.2461, -56.7262 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 7 )

[node name="Right_Tick" type="Sprite" parent="Map/Right_Level"]

visibility/visible = false
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Right_Level"]

transform/pos = Vector2( 69.2461, -56.7262 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="GrassLock" type="Sprite" parent="Map/Right_Level"]

transform/pos = Vector2( 74.2383, -62.7562 )
transform/rot = -15.0
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="Left_Level" type="Area2D" parent="Map"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -125.701, -3.67546 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 10 )

[node name="Left_Tick" type="Sprite" parent="Map/Left_Level"]

visibility/visible = false
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Left_Level"]

transform/pos = Vector2( -125.701, -3.67546 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="IslandLock" type="Sprite" parent="Map/Left_Level"]

transform/pos = Vector2( -130.748, -11.7866 )
transform/rot = 30.0
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="Control" type="Control" parent="Map"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Island" type="Label" parent="Map/Control"]

rect/rotation = -335.17
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -263.0
margin/top = -31.0
margin/right = 121.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 12 )
text = "The Island"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mountains" type="Label" parent="Map/Control"]

rect/rotation = -395.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -19.0
margin/top = -19.0
margin/right = 490.0
margin/bottom = 78.0
custom_fonts/font = ExtResource( 12 )
text = "The Mountains"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Grass" type="Label" parent="Map/Control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -7.0
margin/top = -167.0
margin/right = 365.0
margin/bottom = -70.0
custom_fonts/font = ExtResource( 12 )
text = "The Grass"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Small World" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -305.0
margin/top = -250.0
margin/right = 305.0
margin/bottom = -153.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0.320313, 0.0212708, 0.0212708, 1 )
text = "The Small World"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Back" parent="." instance=ExtResource( 13 )]

transform/pos = Vector2( 400, -210 )

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2


